--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,18 @@ header h1{
 }
 
 main{
-    margin-top: 250px;
+    margin-top: 100px;
 }
 
-main script{
-    font-size: x-large;
-}
 
+main ul{
+    font-size: x-large;   
+    margin-left: 20px;
+
+}
 main p{
     font-size: x-large;
-    margin: 30px;
-    text-align: center;
-    
-
+    margin-left: 20px;
 }
 main p a button{
     font-size: x-large;
@@ -36,6 +35,16 @@ main p a button{
 
 }
 
+main ol{
+    font-size: x-large;
+    margin-left: 10px;
+    display: inline-flex;
+
+}
+main ol li{
+    margin-left: 20px;
+    margin-right: 15px;
+}
 
 footer{
     color:white;
@@ -43,5 +52,6 @@ footer{
     opacity: 0.7;
     text-align: center;
     font-size: 35px;
-    margin-top: 170px;
+    margin-bottom: 0%;
+    margin-top: 140px;
 }
