--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 body{
     background-image: url(https://wallpaper.dog/large/5486750.png);
     opacity: 0.95;
@@ -5,17 +7,18 @@ body{
 }
 
 header h1{
+    
     background-color: black;
     color: blanchedalmond;
     opacity: 0.7;
-    text-align: center;
     font-size: 55px;
-    margin-top: 0px;
-
+    text-align: center;
+    margin-top: 0mm;
 }
 
 main{
     margin-top: 100px;
+    position: relative;
 }
 
 
@@ -28,11 +31,13 @@ main p{
     font-size: x-large;
     margin-left: 20px;
 }
+
+.aboutme{
+    margin-right: 2%;
+}
+
 main p a button{
     font-size: x-large;
-    text-align: center;
-    
-
 }
 
 main ol{
@@ -44,6 +49,11 @@ main ol{
 main ol li{
     margin-left: 20px;
     margin-right: 15px;
+}
+
+#me{
+    text-align: center;
+    margin-top: 30px;
 }
 
 footer{
